<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="false" >

        <LinearLayout
            android:id="@+id/colorPicker"
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical" >
		        
	            <View
			    android:layout_width="fill_parent"
			    android:layout_height="1dp"
			    android:background="@android:color/darker_gray"/>

	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="40dp"
	                android:layout_gravity="center_vertical"
	                android:orientation="horizontal" >

	                <TextView
	                    android:id="@+id/textView1"
	                    android:layout_width="0dp"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center_vertical"
	                    android:layout_marginLeft="20dp"
	                    android:layout_weight="1"
	                    android:orientation="vertical"
	                    android:text="@string/blink" />

	                <CheckBox
	                    android:id="@+id/checkBox1"
	                    android:layout_width="0dp"
	                    android:layout_height="wrap_content"
	                    android:layout_gravity="center_vertical"
	                    android:layout_weight="1"
	                    android:checked="false" />
	            </LinearLayout>


        </LinearLayout>
        
	     <LinearLayout
	         android:layout_width="fill_parent"
	         android:layout_height="60dp"
	         android:orientation="vertical" >

	         <View
	             android:layout_width="fill_parent"
	             android:layout_height="1dp"
	             android:background="@android:color/darker_gray" />

	         <TextView
	             android:id="@+id/textView1"
	             android:layout_width="match_parent"
	             android:layout_height="wrap_content"
	             android:layout_marginLeft="20dp"
	             android:layout_marginTop="5dp"
	             android:orientation="vertical"
	             android:text="@string/ontime" />

	         <SeekBar
	             android:id="@+id/SeekBar1"
	             android:layout_width="match_parent"
	             android:layout_height="wrap_content"
	             android:layout_marginLeft="5dp"
	             android:max="2000"
	             android:progress="50" />

	     </LinearLayout>

	     <LinearLayout
	         android:layout_width="fill_parent"
	         android:layout_height="60dp"
	         android:orientation="vertical" >

	         <View
	             android:layout_width="fill_parent"
	             android:layout_height="1dp"
	             android:background="@android:color/darker_gray" />

	         <TextView
	             android:id="@+id/TextView2"
	             android:layout_width="match_parent"
	             android:layout_height="wrap_content"
	             android:layout_marginLeft="20dp"
	             android:layout_marginTop="5dp"
	             android:orientation="vertical"
	             android:text="@string/offtime" />

	         <SeekBar
	             android:id="@+id/SeekBar2"
	             android:layout_width="match_parent"
	             android:layout_height="wrap_content"
	             android:layout_marginLeft="5dp"
	             android:max="2000"
	             android:progress="50" />
	     </LinearLayout>
 </LinearLayout>	     
	     